force-app/src/objects/CTCM__StatementLine__c.object
<CustomObject>
    <fields>
        <fullName>CTCM__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTCM__Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTCM__BankNumber__c</fullName>
        <label>BankNumber</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTCM__BookingDate__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTCM__CreditIndicator__c</fullName>
        <label>Credit Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__CurrencyAmount__c</fullName>
        <label>Currency &amp; Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__CurrencyCode__c</fullName>
        <label>CurrencyCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__CurrentDate__c</fullName>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTCM__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTCM__End_To_End_ID__c</fullName>
        <label>End To End ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__IBANNumber__c</fullName>
        <label>IBAN Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTCM__Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <referenceTo>CTCM__Statement__c</referenceTo>
        <relationshipLabel>StatementLines</relationshipLabel>
        <relationshipName>StatementLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__StornoCode__c</fullName>
        <label>StornoCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>StatementLine</label>
    <nameField>
        <label>StatementLine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StatementLines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>